--- a/app/src/main/res/layout/registeration_fragment.xml
+++ b/app/src/main/res/layout/registeration_fragment.xml
@@ -96,7 +96,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
