--- a/app/src/main/res/layout/user_view_item.xml
+++ b/app/src/main/res/layout/user_view_item.xml
@@ -3,85 +3,98 @@
     style="@style/RippleStyleBlack"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
-
-    <LinearLayout
+>
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:elevation="17dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="clip_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/lyt_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:minHeight="?attr/actionBarSize"
-            android:orientation="horizontal">
-
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="@dimen/spacing_large"
-                android:layout_marginTop="@dimen/spacing_middle"
-                android:layout_marginRight="@dimen/spacing_large"
-                android:src="@drawable/man_with_lehya" />
-
-            <View
-                android:layout_width="@dimen/spacing_medium"
-                android:layout_height="0dp" />
+            android:layout_height="match_parent"
+            android:gravity="clip_horizontal"
+            android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/lyt_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:clickable="true"
+                android:minHeight="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/image"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="@dimen/spacing_large"
+                    android:layout_marginTop="@dimen/spacing_middle"
+                    android:layout_marginRight="@dimen/spacing_large"
+                    android:src="@drawable/man_with_lehya" />
+
+                <View
+                    android:layout_width="@dimen/spacing_medium"
+                    android:layout_height="0dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/spacing_middle"
-                    android:paddingBottom="@dimen/spacing_middle">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/spacing_middle"
-                        android:layout_marginRight="@dimen/spacing_middle"
-                        android:text="عريس 23 سنة القاهرة"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="@color/grey_90" />
+                        android:gravity="right"
+                        android:orientation="vertical"
+                        android:paddingTop="@dimen/spacing_middle"
+                        android:paddingBottom="@dimen/spacing_middle">
 
-                    <TextView
-                        android:id="@+id/description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
-                        android:layout_marginEnd="@dimen/spacing_middle"
-                        android:layout_marginRight="@dimen/spacing_middle"
-                        android:ellipsize="end"
-                        android:maxLines="3"
-                        android:text="@string/welcome_body"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                        android:textColor="@color/grey_60" />
+                        <TextView
+                            android:id="@+id/name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/spacing_middle"
+                            android:layout_marginRight="@dimen/spacing_middle"
+                            android:text="عريس 23 سنة القاهرة"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textColor="@color/grey_90" />
+
+                        <TextView
+                            android:id="@+id/description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/spacing_medium"
+                            android:layout_marginEnd="@dimen/spacing_middle"
+                            android:layout_marginRight="@dimen/spacing_middle"
+                            android:ellipsize="end"
+                            android:maxLines="3"
+                            android:text="@string/welcome_body"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                            android:textColor="@color/grey_60" />
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
-
             </LinearLayout>
 
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="5dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="13dp"
+                android:background="@drawable/seperator"
+                android:scaleType="centerInside" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
+
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="13dp"
-            android:background="@drawable/seperator"
-            android:scaleType="centerInside" />
-
-    </LinearLayout>
 </com.balysv.materialripple.MaterialRippleLayout>
