--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -45,6 +45,19 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/userCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:text="code"
+                    android:textDirection="rtl"
+                    android:textSize="16sp" />
+
+                <TextView
                     android:id="@+id/userAge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
