--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textDirection="rtl"
+    android:layoutDirection="rtl"
     android:orientation="vertical">
 
     <ProgressBar
@@ -71,14 +73,19 @@
         android:id="@+id/signedInUserContainesr"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textDirection="rtl"
+        android:layoutDirection="rtl"
         android:fitsSystemWindows="true"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_bar_height"
             android:fitsSystemWindows="true"
+            android:textDirection="rtl"
+            android:layoutDirection="rtl"
             android:theme="@style/Theme.FirebaseMVVM.AppBarOverlay">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -87,6 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                android:layoutDirection="rtl"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|noScroll"
                 app:toolbarId="@+id/toolbar">
@@ -96,11 +104,12 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/profileBackground"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layoutDirection="rtl"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/profile_background3"
+                        android:src="@drawable/man_background"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
@@ -114,12 +123,14 @@
                         android:layout_height="wrap_content"
                         android:text="28"
                         android:textAlignment="center"
+                        android:textDirection="rtl"
+                        android:layoutDirection="rtl"
                         android:textSize="32sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView"
-                        app:layout_constraintHorizontal_bias="0.275"
+                        app:layout_constraintEnd_toEndOf="@+id/profileBackground"
+                        app:layout_constraintHorizontal_bias="0.72"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="@+id/profileBackground"
                         app:layout_constraintVertical_bias="0.68" />
 
                     <TextView
@@ -127,10 +138,12 @@
                         android:layout_height="wrap_content"
                         android:text="سنة"
                         android:textAlignment="center"
+                        android:textDirection="rtl"
+                        android:layoutDirection="rtl"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView"
-                        app:layout_constraintHorizontal_bias="0.28"
+                        app:layout_constraintEnd_toEndOf="@+id/profileBackground"
+                        app:layout_constraintHorizontal_bias="0.72"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/age"
                         app:layout_constraintVertical_bias="0.0" />
@@ -143,14 +156,16 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
+                        android:textDirection="rtl"
+                        android:layoutDirection="rtl"
                         android:text="عريس ملتحي"
                         android:textColor="@color/grey_800"
                         android:textSize="32sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView"
-                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintEnd_toEndOf="@+id/profileBackground"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="@+id/profileBackground"
                         app:layout_constraintVertical_bias="0.719" />
 
 
@@ -167,17 +182,19 @@
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <include android:id="@+id/content" layout="@layout/content_scrolling" />
+        <include
+            android:id="@+id/content"
+            layout="@layout/content_scrolling" />
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:elevation="4dp"
             android:layout_marginEnd="@dimen/fab_margin"
+            android:elevation="4dp"
+            android:src="@drawable/man_with_lehya"
             app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
-            android:src="@drawable/man_with_lehya" />
+            app:layout_anchorGravity="bottom|end" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -185,6 +202,7 @@
         android:id="@+id/noSignedInUserContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layoutDirection="rtl"
         android:visibility="gone">
 
         <ImageView
@@ -192,6 +210,8 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:alpha="0.5"
+            android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:src="@drawable/ic_baseline_account_circle_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -205,6 +225,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="16dp"
+            android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:text="قم بإنشاء حسابك الخاص حتى تستقبل وترسل الطلبات"
             android:textColor="@color/grey_60"
             app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
@@ -235,10 +257,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layoutDirection="rtl"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_create_account">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="هل لديك حساب بالفعل ؟  "
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/btn_go_to_login"
@@ -251,25 +284,27 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:text="هل لديك حساب بالفعل ؟  "
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            android:layoutDirection="rtl"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text=" عن طريق التسجيل فأنت توافق ضمنيا على"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/terms_of_use"
@@ -281,16 +316,6 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:text=" عن طريق التسجيل فأنت توافق ضمنيا على"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textSize="14sp" />
 
         </LinearLayout>
 
