--- a/app/src/main/res/layout/question_row_text_input.xml
+++ b/app/src/main/res/layout/question_row_text_input.xml
@@ -104,10 +104,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layoutDirection="rtl"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/nextBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:drawableRight="@drawable/ic_arrow_right"
+            android:text="تأكيد" />
 
         <Button
             android:id="@+id/backBtn"
@@ -118,14 +128,6 @@
             android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
             android:text="السابق" />
 
-        <Button
-            android:id="@+id/nextBtn"
-            android:drawableRight="@drawable/ic_arrow_right"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:text="تأكيد" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
