--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -79,7 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layoutDirection="rtl"
-                        android:text="28"
+                        android:text=""
                         android:textAlignment="center"
                         android:textDirection="rtl"
                         android:textSize="32sp"
@@ -114,7 +114,7 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:layoutDirection="rtl"
-                        android:text="عريس ملتحي"
+                        android:text=""
                         android:textColor="@color/grey_800"
                         android:textDirection="rtl"
                         android:textSize="32sp"
@@ -159,7 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
-            android:src="@drawable/ic_baseline_bookmark_add_24"
+            android:src="@drawable/ic_outline_bookmark_add_24"
             android:backgroundTint="@color/primary"
             app:layout_anchor="@id/app_bar"
             app:fabSize="mini"
